--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -1,8 +1,15 @@
 @import "../../Styles/common.scss";
+@keyframes marquee {
+  0% {
+    left: 0%;
+  }
+  100% {
+    left: 100%;
+  }
+}
 
 .Main {
   overflow: hidden;
-
   .slick-slider {
     ul {
       bottom: 8%;
@@ -17,8 +24,14 @@
   .shop {
     background: transparent;
     position: absolute;
-    left: 44.5%;
-    top: 100%;
+    left: 47%;
+    top: 57vw;
+
+    .link {
+      background-color: transparent;
+      color: $default-yellow;
+      font-weight: 500;
+    }
 
     p {
       background: transparent;
@@ -27,50 +40,34 @@
     }
   }
 
-  .marquee {
-    height: 25px;
-    width: 220px;
-    margin: 0 40px;
-    overflow: hidden;
-    position: absolute;
-    right: 1%;
-    top: 100%;
-
-    div {
-      width: 200%;
-      height: 30px;
-      position: absolute;
-      overflow: hidden;
-      animation: marquee 2s linear infinite;
-
-      span {
-        float: left;
-        width: 100%;
-        background: $default-yellow;
-      }
-    }
-  }
-
-  @keyframes marquee {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -100%;
-    }
-  }
-
   .productSection {
     width: 100%;
-    height: 120vh;
-    border: 1px solid black;
+    height: 110vh;
     font-size: 60px;
     font-weight: 800;
     text-align: center;
     padding-top: 2%;
+    p {
+      font-size: 5.56vw;
+      line-height: 4.72vw;
+      &:first-child {
+        margin-top: 3%;
+      }
+    }
 
     .items {
+      margin-top: 5%;
       position: relative;
+    }
+
+    .shopNow {
+      font-size: 3vw;
+      font-weight: 500;
+      margin-top: 2.2vw 0;
+
+      .link {
+        color: $default-black;
+      }
     }
 
     .slick-slider {
@@ -89,8 +86,8 @@
       position: absolute;
       top: 20%;
       background-color: transparent;
-      width: 10%;
-      height: 50%;
+      width: 11%;
+      height: 37%;
     }
 
     .arrowLeft {
@@ -104,13 +101,14 @@
 
   .NewsletterSection {
     display: flex;
+    border-top: 1.5px $default-black solid;
 
     img {
       width: 50%;
+      height: 85vh;
     }
 
     div {
-      border: 1px solid red;
       width: 50%;
       display: flex;
       flex-direction: column;
