--- a/src/Pages/ProductDetails/ComponentYH/LeftSlider/LeftSlider.scss
+++ b/src/Pages/ProductDetails/ComponentYH/LeftSlider/LeftSlider.scss
@@ -1,12 +1,28 @@
 .LeftSlider {
     position: relative;
+    width: 50vw;
+
+    .Background_fixed {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        z-index: 10;
+        width: 50vw;
+
+        img{
+            width: 100%;
+            height: 100vh;
+            object-fit: cover;
+            margin-bottom: 8vh;
+        }
+    }
 
     .Background {
         display: flex;
         flex-direction: column;
         position: absolute;
         z-index: 10;
-        overflow: hidden;
+        width: 50vw;
         
         img{
             width: 100%;
@@ -19,18 +35,18 @@
     .Foreground {
         display: flex;
         flex-direction: column;
-        position: absolute;
         background-color: transparent;
         z-index: 20;
+        position: absolute;
 
         .Fore.Icon1 {
-            width: 50vw;
+            width: 70vw;
             height: 85vw;
         }
         
 
         .Fore {
-            width: 50vw;
+            width: 70vw;
             height: 100vh;
             object-fit: cover;
             background-color: transparent;
@@ -54,6 +70,9 @@
             img.Product {
                 position: absolute;
                 left: 20vw;
+                height: 80%;
+                width: auto;
+                z-index: 30;
             }
 
             img.Icon2 {
