--- a/src/Pages/ProductDetails/ProductDetails.scss
+++ b/src/Pages/ProductDetails/ProductDetails.scss
@@ -4,21 +4,118 @@
     .Description{
         background-color: black;
         display: flex;
-
+        height: 324vh;
 
         .Leftside {
             left: 0px;
-            width: 50%;
+            width: 52vw;
         }
 
         .Rightside  {
             right: 0px;
-            width: 50%;
+            width: 48vw;
         }
     }
 
     .YouMayAlsoLike{
-        background-color: crimson;
-        width: 100%;
+
+        .productSection {
+            width: 100%;
+            height: 120vh;
+            border: 1px solid black;
+            font-size: 60px;
+            font-weight: 800;
+            text-align: center;
+            padding-top: 5%;
+        
+            .items {
+              position: relative;
+              margin-top: 5%;
+            }
+        
+            .slick-slider {
+              margin-left: 50px;
+            }
+        
+            .arrow {
+              background-color: transparent;
+              display: flex;
+              justify-content: space-between;
+              margin: 0 50px;
+            }
+        
+            .arrowLeft,
+            .arrowRight {
+              position: absolute;
+              top: 20%;
+              background-color: transparent;
+              width: 10%;
+              height: 50%;
+            }
+        
+            .arrowLeft {
+              left: 30px;
+            }
+        
+            .arrowRight {
+              right: 30px;
+            }
+          }
+    }
+
+    .ReviewList {
+        .List {
+            position: relative;
+
+            .HowMany {
+                text-align: center;
+                position: relative;
+                text-transform: uppercase;
+                font-weight: bold;
+                font-size: 20vh;
+                top: 30vh;
+            }
+            .Reviews {
+                position: absolute;
+                top: 3vh;
+                right: 10px;
+                margin: 5vw;
+                background-color: transparent;
+
+                ul{
+                    background-color: transparent;
+
+                    li {
+                        padding: 20px;
+                        margin: 3vh;
+                        font-size: 0.7vh;;
+                        background-color: rgb(8, 127, 255);
+                        border-radius: 15px;
+                        width: 40vw;
+                        color: white;
+                        line-height: 20px;
+
+                        p:first-child {
+                            font-weight: 800;
+                            margin-right: 10vw;
+                            background-color: transparent;
+                        }
+
+                        p {
+                            background-color: transparent;
+                            span{
+                                margin-left: 3vh;
+                                background-color: transparent;
+                                font-weight: bold;
+                                background-color: transparent;
+                            }
+                        }
+
+                    }
+                }
+
+            }
+
+        }
     }
 }
