--- a/src/Pages/ProductList/Components/Product/Product.scss
+++ b/src/Pages/ProductList/Components/Product/Product.scss
@@ -68,6 +68,10 @@
   overflow: hidden;
   background-color: rgb(247, 247, 247);
 
+  .link {
+    background-color: transparent;
+  }
+
   .productThumbnail {
     background-color: rgb(247, 247, 247);
     margin: 0;
