--- a/src/Pages/LoginRegister/LoginRegister.scss
+++ b/src/Pages/LoginRegister/LoginRegister.scss
@@ -1,7 +1,7 @@
 @import "../../Styles/common.scss";
 
-.LoginRegister-BH {
-  .loginContainer {
+.LoginRegister {
+  .loginContainerMain {
     position: relative;
     height: 100vh;
     width: 100vw;
