--- a/src/Pages/Components/Footer/Footer.scss
+++ b/src/Pages/Components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../../Styles/common.scss";
 @keyframes marquee {
   0% {
-    left: 0;
+    left: -100%;
   }
   100% {
     left: -300%;
@@ -10,7 +10,7 @@
 
 .Footer {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
 
   .footerTop {
     height: 37vh;
@@ -37,6 +37,7 @@
   }
 
   .footerNewletter {
+    position: relative;
     .detail {
       height: 60%;
       padding: 5px;
@@ -103,23 +104,29 @@
 
     .marquee {
       height: 1.7vw;
-      width: 18vw;
-      position: relative;
-      margin: 0px 2.78vw 1.39vw 40px;
-      background-color: $default-yellow;
+      width: 22vw;
+      position: absolute;
+      left: 0;
+      top: 110%;
+      margin-bottom: 2vw;
+      margin-left: 2vw;
+      background-color: rgb(255, 232, 0);
+      display: inline-block;
       overflow: hidden;
       div {
-        width: 450%;
+        width: 700%;
         padding: 0;
         height: 1vw;
         background-color: transparent;
         position: absolute;
         bottom: 0;
         display: flex;
-        animation: marquee 9s linear infinite;
+        animation: marquee 6s linear infinite;
         span {
           background-color: transparent;
-          font: $button-meta-font;
+          font: inherit;
+          font-size: 20px;
+          font-weight: 700;
           line-height: 0.6vw;
           display: block;
           padding: 0;
@@ -137,9 +144,10 @@
     font-weight: 800;
   }
 
-  span {
+  .right {
     position: absolute;
+    margin-bottom: 2%;
     background-color: transparent;
-    margin-left: 15%;
+    right: 5%;
   }
 }
